kustomize/overlays/dev/microservice1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: microservice1
  namespace: dev-namespace
spec:
  to:
    kind: Service
    name: microservice1
    weight: 100
  host: microservice1-dev.dev.apps.rohit-redhat-sno-adventures.rtaneja.lan
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
